--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,15 +1,12 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 'android-L'
-    buildToolsVersion "20.0.0"
+    buildToolsVersion '20.0.0'
 
     defaultConfig {
-        applicationId "br.com.igorsantos.gymcompanion"
-        minSdkVersion 8
-        targetSdkVersion 'L'
+        applicationId 'br.com.igorsantos.gymcompanion'
         versionCode 1
-        versionName "1.0"
+        versionName '1.0'
     }
     buildTypes {
         release {
@@ -17,9 +14,23 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+
+    productFlavors {
+//        l {
+//            minSdkVersion 'android-L'
+//            targetSdkVersion 'android-L'
+//            compileSdkVersion 'android-L'
+//        }
+        old {
+            minSdkVersion 8
+            targetSdkVersion 20
+            compileSdkVersion 20
+        }
+    }
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile 'com.android.support:appcompat-v7:19.+'
+    compile fileTree(include: ['*.jar'], dir: 'libs')
+//    lCompile 'com.android.support:appcompat-v7:21.+'
+    oldCompile 'com.android.support:appcompat-v7:19.+'
 }
